--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         })
 
         $('#results').hide();
-        keypress.combo("ctrl t", function(e) {
+        keypress.combo("escape", function(e) {
             e.preventDefault();
             $('#cards').slideToggle('fast');
             $('#results').empty();
